# src/modules/cars/entities/Category.ts
@@ -1,0 +1,25 @@
+import { randomUUID } from "node:crypto";
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
+
+@Entity("categories")
+class Category {
+  @PrimaryColumn()
+  id?: string;
+
+  @Column()
+  name!: string;
+
+  @Column()
+  description!: string;
+
+  @CreateDateColumn()
+  created_at!: Date;
+
+  constructor() {
+    if (!this.id) {
+      this.id = randomUUID();
+    }
+  }
+}
+
+export { Category };
